<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.nflscoretracker.MainActivity">

    <ImageView
        android:id="@+id/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/football_bg" />

    <LinearLayout
        android:id="@+id/score_entire_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/score_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/initial_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/team_a_score_card_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/score_card_margin"
                android:layout_marginStart="@dimen/score_card_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/team_a_logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/logo_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/teamA_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/eagles" />

                <TextView
                    android:id="@+id/team_a_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_thin"
                    android:gravity="center"
                    android:text="@string/teamA_city"
                    android:textColor="#000000"
                    android:textSize="@dimen/subtitle"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/team_a_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_thin"
                    android:gravity="center"
                    android:text="@string/teamA"
                    android:textColor="#000000"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_thin"
                    android:gravity="center"
                    android:text="@string/points"
                    android:textColor="#000000"
                    android:textSize="@dimen/points"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/team_b_score_card_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/score_card_margin"
                android:layout_marginStart="@dimen/score_card_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/team_b_logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/logo_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/teamB_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/patriots" />

                <TextView
                    android:id="@+id/team_b_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_thin"
                    android:gravity="center"
                    android:text="@string/teamB_city"
                    android:textColor="#000000"
                    android:textSize="@dimen/subtitle"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/team_b_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_thin"
                    android:gravity="center"
                    android:text="@string/teamB"
                    android:textColor="#000000"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_thin"
                    android:gravity="center"
                    android:text="@string/points"
                    android:textColor="#000000"
                    android:textSize="@dimen/points"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/score_adder_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/team_a_score_adder_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/a_touchdown_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="touchdownTeamA"
                            android:text="@string/touchdown"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/a_extra_point_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="extraPointTeamA"
                            android:text="@string/extra"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/a_field_goal_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="fieldGoalTeamA"
                            android:text="@string/fieldGoal"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/a_two_point_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="conversionTeamA"
                            android:text="@string/twoPoint"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/a_safety_point_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="safetyTeamA"
                            android:text="@string/safetyPoint"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/team_b_score_adder_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/b_touchdown_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="touchdownTeamB"
                            android:text="@string/touchdown"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/b_extra_point_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="extraPointTeamB"
                            android:text="@string/extra"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/b_field_goal_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="fieldGoalTeamB"
                            android:text="@string/fieldGoal"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/b_two_point_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginBottom="@dimen/button_spacing"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="conversionTeamB"
                            android:text="@string/twoPoint"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/b_safety_point_button"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginEnd="@dimen/button_horizontal_margin"
                            android:layout_marginStart="@dimen/button_horizontal_margin"
                            android:fontFamily="@font/roboto_thin"
                            android:onClick="safetyTeamB"
                            android:text="@string/safetyPoint"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/button_text"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/superbowl_logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/superbowl_logo_height"
                    android:layout_below="@id/score_adder_layout"
                    android:layout_marginTop="@dimen/superbowl_logo_margin"
                    android:alpha="0.6"
                    android:contentDescription="@string/superbowl_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/superbowl_logo" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_below="@id/superbowl_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/reset_margin"
                    android:fontFamily="@font/roboto_thin"
                    android:onClick="resetScores"
                    android:paddingEnd="@dimen/reset_pad"
                    android:paddingStart="@dimen/reset_pad"
                    android:text="@string/reset"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/button_text"
                    android:textStyle="bold" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
